Backported from trunk: gettext syntax checker and a few fixes
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10876 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/translations/it.po
+++ b/gforge/translations/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Gforge 4.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-03 17:54+0200\n"
-"PO-Revision-Date: 2010-05-06 14:22+0200\n"
+"PO-Revision-Date: 2010-10-06 16:22+0200\n"
 "Last-Translator: Reinhard Spisser <reinhard.spisser@fiditalia.it>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: it\n"
@@ -422,8 +422,8 @@ msgstr "ERRORE: DB: Impossibile cambiare proprieta' gruppo: %s"
 #, php-format
 msgid "New Doc Address Appeared Invalid: %s"
 msgid_plural "New Doc Addresses Appeared Invalid: %s"
-msgstr[0] "L'indirizzo del nuovo documento non è valido"
-msgstr[1] "Gli indirizzi del nuovo documento non sono validi"
+msgstr[0] "L'indirizzo del nuovo documento non è valido: %s"
+msgstr[1] "Gli indirizzi del nuovo documento non sono validi: %s"
 
 #: common/include/Group.class.php:566
 msgid ""
