--- a/gforge/translations/zh_CN.po
+++ b/gforge/translations/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Gforge 4.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-03 17:54+0200\n"
-"PO-Revision-Date: 2010-04-30 16:36+0200\n"
+"PO-Revision-Date: 2010-10-06 16:22+0200\n"
 "Last-Translator: 邱承 <qiucheng1@sina.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: zh_CN\n"
@@ -307,8 +307,7 @@ msgstr ""
 "项目 %1$s(%2$s)已发布一个新的版本包 \"%3$s\"。\n"
 "您可以通过下面的链接下载:\n"
 "%4$s\n"
-"您接收到本邮件是由于您请求在有新的版本发布时通知您。如果您不希望被通知,请登录"
-"到 %5%s 点击链接:\n"
+"您接收到本邮件是由于您请求在有新的版本发布时通知您。如果您不希望被通知,请登录到 %5$s 点击链接:\n"
 "\n"
 "%6$s"
 
@@ -689,16 +688,7 @@ msgid ""
 "if there is anything we can do to help you.\n"
 "\n"
 "-- the %4$s crew"
-msgstr ""
-"你注册的项目 %4$s 已经批准.项目全名:  %1$s项目Unix名:  %2$s你的DNS需要一天才"
-"能激活。你的WEB网站可以通过shell帐号存取。请阅读下面的链接中的建站文档来了解"
-"用法,可使用的服务,和帐号的目录布局.你如果登录后访问%4%s处的项目页面, 将会发现"
-"额外的菜单功能项:'项目管理'.强烈建议你现在访问 %4$s ,创建项目的公开说明.请登"
-"录后访问项目页面, 选择左边的'项目管理' 菜单(或登录后访问%3$s).在你未通过项目"
-"管理页面将项目分类前，你的项目不会在项目分类列表中显示(部署在%4$s上的项目列"
-"表，以易于查找和浏览) 。这样人们可以很方便的发现你的项目.登录后访问你的项目,"
-"再选择左边菜单的'项目管理'.享用这个系统的同时请告诉其他人%4$s。如果有需要请与"
-"我们联系，我们乐于提供帮助。-- %4$s的成员"
+msgstr "你注册的项目 %4$s 已经批准.项目全名:  %1$s项目Unix名:  %2$s你的DNS需要一天才能激活。你的WEB网站可以通过shell帐号存取。请阅读下面的链接中的建站文档来了解用法,可使用的服务,和帐号的目录布局.你如果登录后访问%4$s处的项目页面, 将会发现额外的菜单功能项:'项目管理'.强烈建议你现在访问 %4$s ,创建项目的公开说明.请登录后访问项目页面, 选择左边的'项目管理' 菜单(或登录后访问%3$s).在你未通过项目管理页面将项目分类前，你的项目不会在项目分类列表中显示(部署在%4$s上的项目列表，以易于查找和浏览) 。这样人们可以很方便的发现你的项目.登录后访问你的项目,再选择左边菜单的'项目管理'.享用这个系统的同时请告诉其他人%4$s。如果有需要请与我们联系，我们乐于提供帮助。-- %4$s的成员"
 
 #: common/include/Group.class.php:2260
 #, php-format
