--- a/gforge/translations/fr.po
+++ b/gforge/translations/fr.po
@@ -7,10 +7,11 @@ msgstr ""
 "Project-Id-Version: FusionForge 4.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-03 17:54+0200\n"
-"PO-Revision-Date: 2010-10-03 17:57+0200\n"
+"PO-Revision-Date: 2010-10-06 16:19+0200\n"
 "Last-Translator: Roland Mas <lolando@debian.org>\n"
 "Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: fr\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
