--- a/src/translations/eu.po
+++ b/src/translations/eu.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-06 15:05+0200\n"
 "PO-Revision-Date: 2009-02-19 23:28+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
