--- a/src/translations/ja.po
+++ b/src/translations/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-06 15:05+0200\n"
 "PO-Revision-Date: 2009-01-15 14:05+0100\n"
 "Last-Translator: Roland Mas <lolando@debian.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
