--- a/src/translations/pl.po
+++ b/src/translations/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-06 15:05+0200\n"
 "PO-Revision-Date: 2009-10-06 16:20+0200\n"
 "Last-Translator: Roland Mas <lolando@debian.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
