--- a/src/translations/ru.po
+++ b/src/translations/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-06 15:05+0200\n"
 "PO-Revision-Date: 2009-02-18 16:52+0100\n"
 "Last-Translator: Aleksey Bragin <aleksey@reactos.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
