--- a/gforge/translations/es.po
+++ b/gforge/translations/es.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-03 17:54+0200\n"
 "PO-Revision-Date: 2010-10-06 16:19+0200\n"
 "Last-Translator: Luis Cañas Díaz <lcanas@libresoft.es>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
