--- a/gforge/translations/sv.po
+++ b/gforge/translations/sv.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-03 17:54+0200\n"
 "PO-Revision-Date: 2009-07-19 01:41+0200\n"
 "Last-Translator: Martin Bagge <brother@bsnet.se>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
