--- a/gforge/translations/th.po
+++ b/gforge/translations/th.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-03 17:54+0200\n"
 "PO-Revision-Date: 2009-10-06 16:32+0200\n"
 "Last-Translator: Roland Mas <lolando@debian.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: th\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
