--- a/src/translations/pt.po
+++ b/src/translations/pt.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Gforge 4.7\n"
+"Project-Id-Version: FusionForge 5.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-06 15:05+0200\n"
 "PO-Revision-Date: 2009-02-01 14:35+0100\n"
