--- a/src/translations/ca.po
+++ b/src/translations/ca.po
@@ -14520,7 +14520,7 @@ msgstr "Usuaris (VERMELL) / Projectes (BLAU)"
 #: www/stats/views_graph.php:99
 #, fuzzy
 msgid "Forge Page Views"
-msgstr "Visites de la pàgina Gforge"
+msgstr "Visites de la pàgina Forge"
 
 #: www/stats/views_graph.php:100
 #, php-format
