--- a/src/translations/ko.po
+++ b/src/translations/ko.po
@@ -14273,9 +14273,8 @@ msgid "Users (RED) / Projects (BLUE)"
 msgstr "Users (RED) / Projects (BLUE)"
 
 #: www/stats/views_graph.php:99
-#, fuzzy
 msgid "Forge Page Views"
-msgstr "Gforge Page Views"
+msgstr "Forge Page Views"
 
 #: www/stats/views_graph.php:100
 #, php-format
